docs(refresh-token): add swagger docs for refresh token
