# docs/swagger.yaml
@@ -31,6 +31,18 @@ definitions:
       result:
         $ref: '#/definitions/models.SuccessResult'
     type: object
+  models.RefreshTokenRequest:
+    properties:
+      accessToken:
+        example: accessToken
+        type: string
+      refreshToken:
+        example: refreshToken
+        type: string
+    required:
+    - accessToken
+    - refreshToken
+    type: object
   models.SignInSuccessResponse:
     properties:
       result:
@@ -82,6 +94,40 @@ info:
   title: Blockstracker
   version: "1.0"
 paths:
+  /auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Refreshes the access token using a valid refresh token
+      parameters:
+      - description: Refresh token request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.RefreshTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Token refresh successful
+          schema:
+            $ref: '#/definitions/models.SignInSuccessResponse'
+        "400":
+          description: Malformed Request
+          schema:
+            $ref: '#/definitions/models.GenericErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.GenericErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.GenericErrorResponse'
+      summary: Refresh access token
+      tags:
+      - auth
   /auth/signin:
     post:
       consumes:
